@@ -1,5 +1,9 @@
 2010-05-25  Rolf Bjarne Kvinge  <RKvinge@novell.com>
 
+	* pipeline-asf.cpp|h: MmsSource: don't touch http requests on the media thread.
+
+2010-05-25  Rolf Bjarne Kvinge  <RKvinge@novell.com>
+
 	* pipeline.cpp: ProgressiveSource::Dispose: Use the new Resurrect method to
 	prevent a warning when reffing ourselves.
 
